# ros_project

./: README.md
devel/lib/atr_pkg/: atr_pkg_node
devel/lib/lidar/: distance_lidar_node
devel/lib/pkgconfig/: atr_pkg.pc  lidar.pc  nav_pkg.pc  ssr_pkg.pc  wpb_home_behaviors.pc  wpb_home_bringup.pc  wpb_home_python.pc  wpb_home_python3.pc  wpb_home_remote.pc  wpb_home_tutorials.pc  wpbh_local_planner.pc  wpr_simulation.pc
devel/lib/ssr_pkg/: ssr_pkg_node  ssr_pkg_protobuf_node
devel/lib/wpb_home_behaviors/: wpb_home_face_detect_3d  wpb_home_grab_action  wpb_home_grab_server  wpb_home_objects_3d  wpb_home_pass_server  wpb_home_place_action
devel/lib/wpb_home_bringup/: wpb_home_calibrate_velocity  wpb_home_core  wpb_home_imu_tf  wpb_home_js_vel  wpb_home_lidar_filter  wpb_home_motor_encoder  wpb_home_test_mani  wpb_home_test_motors
devel/lib/wpb_home_tutorials/: wpb_home_behavior_node  wpb_home_capture_image  wpb_home_cruise  wpb_home_face_detect  wpb_home_face_node  wpb_home_follow  wpb_home_grab_client  wpb_home_grab_middle  wpb_home_grab_node  wpb_home_grab_object  wpb_home_image_node  wpb_home_imu_turn  wpb_home_joystick_demo  wpb_home_lidar_behavior  wpb_home_lidar_data  wpb_home_lidar_obstacle  wpb_home_mani_ctrl  wpb_home_obj_detect  wpb_home_obj_node  wpb_home_plane_detect  wpb_home_pointcloud_cluster  wpb_home_pointcloud_node  wpb_home_serve_drinks  wpb_home_simple_goal  wpb_home_sound_local  wpb_home_speak  wpb_home_speech_recognition  wpb_home_sr_xfyun  wpb_home_velocity_control  wpb_home_voice_cmd
devel/lib/wpr_simulation/: ball_random_move  demo_cv_face_detect  demo_cv_follow  demo_cv_hsv  demo_cv_image  demo_imu_behavior  demo_imu_data  demo_lidar_behavior  demo_lidar_data  demo_map_pub  demo_map_tool  demo_simple_goal  demo_sr_navigation  demo_vel_ctrl  demo_waypoint_navi  keyboard_vel_ctrl  lidar_filter  teleop_js_node  wpb_home_sim  wpr1_sim
devel/share/atr_pkg/cmake/: atr_pkgConfig.cmake
devel/share/lidar/cmake/: lidarConfig.cmake
devel/share/nav_pkg/cmake/: nav_pkgConfig.cmake
devel/share/roseus/ros/wpb_home_behaviors/: manifest.l
devel/share/roseus/ros/wpb_home_tutorials/: manifest.l
devel/share/ssr_pkg/cmake/: ssr_pkgConfig.cmake
devel/share/wpb_home_behaviors/cmake/: wpb_home_behaviors-msg-paths.cmake  wpb_home_behaviorsConfig.cmake
devel/share/wpb_home_bringup/cmake/: wpb_home_bringupConfig.cmake
devel/share/wpb_home_python/cmake/: wpb_home_pythonConfig.cmake
devel/share/wpb_home_python3/cmake/: wpb_home_python3Config.cmake
devel/share/wpb_home_remote/cmake/: wpb_home_remoteConfig.cmake
devel/share/wpb_home_tutorials/cmake/: wpb_home_tutorials-msg-extras.cmake  wpb_home_tutorialsConfig.cmake
devel/share/wpbh_local_planner/cmake/: wpbh_local_plannerConfig.cmake
devel/share/wpr_simulation/cmake/: wpr_simulationConfig.cmake
src/atr_pkg/: CMakeLists.txt  package.xml
src/atr_pkg/launch/: node_start.launch
src/atr_pkg/src/: sub.cc
src/lidar/: CMakeLists.txt
src/lidar/src/: demo_lidar.cpp
src/nav_pkg/: CMakeLists.txt  package.xml
src/nav_pkg/launch/: nav.launch
src/ros_project/: CMakeLists.txt
src/ros_project/logs/: UNKNOWN.INFO  testLog20241030-084942.672093
src/ros_project/src/: CMakeLists.txt
src/ros_project/src/build-qt_ui-Imported_Kit-Debug/: CMakeCache.txt  CTestConfiguration.ini
src/ros_project/src/build-qt_ui-Imported_Kit-Debug/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
src/ros_project/src/build-qt_ui-Imported_Kit-Debug/catkin_generated/: generate_cached_setup.py  setup_cached.sh
src/ros_project/src/build-qt_ui-Imported_Kit-Debug/devel/: .catkin
src/ros_project/src/common/: CMakeLists.txt  Log.cpp  Log.h  common.cpp  common.h  test.cpp
src/ros_project/src/dds/dds_destination/: CMakeLists.txt  destination_receive.h  destination_recive.cpp  pub_test.cpp  sub_test.cpp
src/ros_project/src/dds/dds_state_error/: CMakeLists.txt  state_error.cxx  state_error.h  state_error.idl  state_errorCdrAux.hpp  state_errorCdrAux.ipp  state_errorPubSubMain.cxx  state_errorPubSubTypes.cxx  state_errorPubSubTypes.h  state_errorPublisher.cxx  state_errorPublisher.h  state_errorSubscriber.cxx  state_errorSubscriber.h
src/ros_project/src/dds/dds_xtypes/destination/: destination.hpp  destination.idl  destinationCdrAux.hpp  destinationCdrAux.ipp  destinationPubSubTypes.cxx  destinationPubSubTypes.hpp  destinationTypeObjectSupport.cxx  destinationTypeObjectSupport.hpp
src/ros_project/src/dds/ddsrpc/ErrorService/: CMakeLists.txt  server.cpp  testClient.cpp
src/ros_project/src/dds/ddsrpc/ErrorService/xtypes/: state_and_error.hpp  state_and_error.idl  state_and_errorCdrAux.hpp  state_and_errorCdrAux.ipp  state_and_errorPubSubTypes.cxx  state_and_errorPubSubTypes.hpp  state_and_errorTypeObjectSupport.cxx  state_and_errorTypeObjectSupport.hpp
src/ros_project/src/protobuf/include/ssr_pkg/: ros_protobuf.h
src/ros_project/src/protobuf/src/: publish_protobuf.cc  publisher_msg.cc
src/ros_project/src/protobuf_msg/: CMakeLists.txt  publish_info.proto
src/ros_project/src/qt_ui/: CMakeLists.txt  SignalSlotProxy.cpp  SignalSlotProxy.h  Singleton.h  const.h  destinationSiteBuffer.cpp  destinatoinSiteBuffer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message_base.h  rosFcuntionbase.h  rosNodeManager.h  rosWorkList.cpp  rosWorkList.h  ros_destination.cpp  ros_destination_send.h  ros_worker.cpp  ros_worker.h
src/ros_project/src/qt_ui/common/: Makefile  cmake_install.cmake  test
src/ros_project/src/qt_ui/logs/: UNKNOWN.INFO  mainWindow20241116-064502.565826  mainWindow20241116-101153.33033  mainWindow20241121-060026.8605  mainWindow20241126-090042.383868  mainWindow20241126-090106.384707
src/ros_project/src/queue/: thraedSafeQueue.h  unlockCircleQueue.h
src/ros_project/src/ros/: destination_pub.cpp
src/ros_project/src/someip/: CMakeLists.txt  client.json  errorSever.cpp  server.json  testclient.cpp
src/ssr_pkg/: CMakeLists.txt
src/ssr_pkg/include/ssr_pkg/: message_traits.h  protobuf_traits.h
src/ssr_pkg/src/: publish_protobuf.cc
src/wpr_simulation/rviz/: map.rviz  slam.rviz
